[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wwpdb.utils.session"
dynamic = ["version"]
description = "wwPDB session support"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Ezra Peisach", email = "ezra.peisach@rcsb.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "WebOB",
    "wwpdb.io",
    "wwpdb.utils.config",
]

requires-python = ">=3.6"

# [project.optional-dependencies]

[project.scripts]

[project.urls]
Homepage = "https://github.com/rcsb/py-wwpdb_utils_session"

[tool.hatch.version]
path = "wwpdb/utils/session/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/wwpdb",
]

[tool.hatch.build.targets.wheel]
packages = ["wwpdb"]

#=================================== Ruff basics =============================#

line-length = 120 # 120 is hatch's default via 'hatch init'
include = [
  "*.py",           # Source
  "pyproject.toml", # This file (RUF rules only)
  "*.ipynb",        # Jupyter notebooks
]

#
#=================================== Ruff lint ==============================#

[tool.ruff.lint]

#
# ------------------------- Ruff misc. options ----------------------
preview = true
explicit-preview-rules = true

ignore = [
  "FBT002",   # Boolean default positional argument in function definition
  "FURB113",  #  Use `stPL.extend(...)` instead of repeatedly calling `stPL.append()`
  "INP001",   # File `xx` is part of an implicit namespace package. Add an `__init__.py
  "N801",     # Class name `markdownTests` should use CapWords convention
  "N802",     # Function name should be lowercase
  "N803",     # Argument name should be lowercase
  "N806",     # in function should be lowercase
  "N816",     # Variable in global scope should not be mixedCase
  "N999",     # Invalid module name,
  "PERF401",  # Use a list comprehension to create a transformed list
  "PLR2004",  # Magic value used in comparison, consider replacing
  "PLR6201",  # Use a `set` literal when testing for membership
  "PLW1514",  # `open` in text mode without explicit `encoding` argument
  "PT009",    # Use a regular `assert` instead of unittest-style `assertGreater`
  "RET504",   # Unnecessary assignment to `X` before `return` statement
  "RUF100",   # RUF REMOVES FLAKE8 noqa!
  "S110",     # `try`-`except`-`pass` detected, consider logging the exception
  "SIM103",   #  Return the condition directly
  "SIM108",   # Use ternary operator
  "SIM115",   # Use context handler for opening files
  "TRY300",   # Consider moving this statement to an `else` block
  "TRY401",   # Redundant exception object included in `logging.exception` call
  "UP008",    # Use `super()` instead of `super(__class__, self)`
  "UP031"     # Use format specifiers instead of percent format
]

# -------------------- default environment scripts ------------------
[tool.hatch.envs.default]
skip-install = true
dependencies = ["mypy", "ruff >=0.6.9"]


[tool.hatch.envs.default.scripts]

# 'format' formats and fixes issues but does not complain
format = [
  "ruff format",
  "ruff check --fix-only",
]

# 'format-python' just excludes Prettier
format-python = ["ruff format", "ruff check --fix-only"]

# 'check' only checks but never fixes
check = ["ruff check --no-fix .", "mypy --non-interactive --install-types -p wwpdb -p tests"]

# only checks with ruff (mypy has a lot of false positives)
check-ruff = "ruff check --no-fix . {args}"

# to complement 'check-ruff'
check-mypy = "mypy --non-interactive --install-types -p wwpdb -p tests {args}"

# only check security via Bandit; we require these rules to pass
check-security = "ruff check --select S --no-fix ."

# -------------------------  Mypy disable until stubs availabl ---------
[[tool.mypy.overrides]]
module = ["wwpdb.*", "webob.*"]
ignore_missing_imports = true
